welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (x=3) {
                     ^